--- a/index.html
+++ b/index.html
@@ -1,15 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divine Love Retreat and Conference Center</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <script src="https://kit.fontawesome.com/1b9e882c9f.js" crossorigin="anonymous"></script>
+
 </head>
+
 <body>
-   <h1>i am going to come out victorious</h1>
-    
+    <section id="header">
+        <a href="#"><img src="./images/logo.png" alt="" height="30px"></a>
+        <div>
+            <ul id="navbar">
+
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="./pages/shop.html">About</a></li>
+                <li><a href="./pages/blog.html">Services</a></li>
+                <li><a href="./pages/about.html">News</a></li>
+                <li><a href="./pages/contact.html">Contact</a></li>
+                <li id="lg-bag"><a href="./pages/cart.html"> <i class="fa-solid fa-bag-shopping"></i></a></li>
+            </ul>
+        </div>
+    </section>
+    <section id="hero">
+        <div class="container swiper mySwiper">
+            <div class="content swiper-wrapper">
+                <div class="slides swiper-slide">
+                    <img src="./images/dracc21.jpg" alt="">
+                    <div class="img-overlay">
+                        <p>Very comfortable and affordable</p>
+                        <h1>Divine Love Retreat and Conference Center</h1>
+                        <h3>Welcome</h3>
+                        <a href="#">Book Now</a>
+
+                    </div>
+                </div>
+                <div class="slides swiper-slide">
+                    <img src="./images/slider1.webp" alt="">
+                    <div class="img-overlay">
+                        <p>Very comfortable and affordable</p>
+                        <h1>Divine Love Retreat and Conference Center</h1>
+                        <h3>Welcome</h3>
+                        <a href="#">Book Now</a>
+
+                    </div>
+                </div>
+                <div class="slides swiper-slide">
+                    <img src="./images/dracc13.jpg" alt="">
+                    <div class="img-overlay">
+                        <p>Very comfortable and affordable</p>
+                        <h1>Divine Love Retreat and Conference Center</h1>
+                        <h3>Welcome</h3>
+                        <a href="#">Book Now</a>
+
+                    </div>
+                </div>
+                <div class="slides swiper-slide">
+                    <img src="./images/slider2.webp" alt="">
+                    <div class="img-overlay">
+                        <p>Very comfortable and affordable</p>
+                        <h1>Divine Love Retreat and Conference Center</h1>
+                        <h3>Welcome</h3>
+                        <a href="#">Book Now</a>
+
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-button-next btn"></div>
+            <div class="swiper-button-prev btn"></div>
+            <div class="swiper-pagination"></div>
+        </div>
+    </section>
 
 
 
@@ -29,7 +95,9 @@
 
 
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
     <script src="./scripts/index.js"></script>
 </body>
+
 </html>
