--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+   
     <section id="header">
         <a href="#"><img src="./images/logo.png" alt="" height="30px"></a>
         <div>
@@ -23,9 +24,13 @@
                 <li><a href="./pages/blog.html">Services</a></li>
                 <li><a href="./pages/about.html">News</a></li>
                 <li><a href="./pages/contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="./pages/cart.html"> <i class="fa-solid fa-bag-shopping"></i></a></li>
+                
+                <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
             </ul>
         </div>
+        <div id="mobile">
+            <i id="bar" class="fa-solid fa-outdent"></i>
+          </div>
     </section>
     <section id="hero">
         <div class="container swiper mySwiper">
@@ -62,6 +67,26 @@
                 </div>
                 <div class="slides swiper-slide">
                     <img src="./images/slider2.webp" alt="">
+                    <div class="img-overlay">
+                        <p>Very comfortable and affordable</p>
+                        <h2>Divine Love Retreat and Conference Center</h2>
+                        <h3>Welcome</h3>
+                        <a href="#">Book Now</a>
+
+                    </div>
+                </div>
+                <div class="slides swiper-slide">
+                    <img src="./images/dracc1.jpg" alt="">
+                    <div class="img-overlay">
+                        <p>Very comfortable and affordable</p>
+                        <h2>Divine Love Retreat and Conference Center</h2>
+                        <h3>Welcome</h3>
+                        <a href="#">Book Now</a>
+
+                    </div>
+                </div>
+                <div class="slides swiper-slide">
+                    <img src="./images/dracc16.jpg" alt="">
                     <div class="img-overlay">
                         <p>Very comfortable and affordable</p>
                         <h2>Divine Love Retreat and Conference Center</h2>
